@@ -101,6 +101,7 @@ export(set_formatter)
 export(set_formatter_type)
 export(set_header_df)
 export(set_header_labels)
+export(set_table_properties)
 export(style)
 export(theme_alafoli)
 export(theme_booktabs)
@@ -151,11 +152,15 @@ importFrom(officer,fp_text)
 importFrom(officer,opts_current_table)
 importFrom(officer,ph_location_type)
 importFrom(officer,ph_with)
+importFrom(officer,prop_table)
 importFrom(officer,read_docx)
 importFrom(officer,read_pptx)
 importFrom(officer,run_autonum)
 importFrom(officer,shortcuts)
 importFrom(officer,styles_info)
+importFrom(officer,table_colwidths)
+importFrom(officer,table_layout)
+importFrom(officer,table_width)
 importFrom(officer,to_wml)
 importFrom(officer,wml_link_images)
 importFrom(rlang,enquo)
